samples/_failures_safe/1761709257_19d6bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_39e479ab.c: In function ‘main’:
./samples/SAFE/__tmp_39e479ab.c:164:5: error: expected expression at end of input
  164 |     if (strlen(input) ==
      |     ^~
./samples/SAFE/__tmp_39e479ab.c:164:5: error: expected declaration or statement at end of input
